fix(dataExplorer): inconsistent spacing and component usage

--- a/src/timeMachine/components/ViewOptions.scss
+++ b/src/timeMachine/components/ViewOptions.scss
@@ -43,7 +43,6 @@ h4.view-options--header {
 h5.view-options--header {
   font-size: 14px;
   border-bottom: $cf-border solid $cf-grey-25;
-  margin-top: $cf-space-l;
   margin-bottom: $cf-space-s;
   padding-bottom: $cf-space-3xs;
 }
