--- a/src/visualization/components/internal/StaticLegend.scss
+++ b/src/visualization/components/internal/StaticLegend.scss
@@ -7,11 +7,9 @@
 }
 
 .latest-y-axis {
-  margin-top: $cf-space-s;
   margin-bottom: $cf-space-2xs;
 }
 
-.latest-x-axis,
 .static-legend-height-slider {
   margin-bottom: $cf-space-s;
 }
